Export packages for java pre module compatibility