@@ -51,8 +51,8 @@
 	</scm>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<scala.tools.version>2.11</scala.tools.version>
@@ -216,9 +216,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7</version>
+				<version>3.0.0</version>
 				<configuration>
 					<skipTests>true</skipTests>
+                    			<argLine>
+                        			--add-opens java.base/java.lang=ALL-UNNAMED
+                        			--add-opens java.base/java.util=ALL-UNNAMED
+                        			--add-opens java.base/java.base=ALL-UNNAMED
+                        			--add-opens java.base/java.util.stream=ALL-UNNAMED
+                    			</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -230,7 +236,8 @@
 					<junitxml>.</junitxml>
 					<filereports>WDF TestSuite.txt</filereports>
 					<tagsToExclude>CassandraUp,SilUp</tagsToExclude>
-				</configuration>
+					<argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.base=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED</argLine>				
+</configuration>
 				<executions>
 					<execution>
 						<id>test</id>
